--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -18,4 +18,25 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+/* globals.css */
+.drag-drop-container {
+  --container-width: 600px;
+}
+
+.drag-drop-container .position-context {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+}
+
+.drag-drop-container .draggable-item {
+  position: absolute;
+  left: calc(50% - (var(--container-width) / 2) + var(--x));
+  top: var(--y);
+  pointer-events: auto;
 }
